fixed issue where user can delete the last possible answer The "-" button is supressed in the template when it is the first answer in a question. Also a CSS change to standardize the height of the answer div to keep it from jumping up and down when the "+" appears/disappears on the first answer.

--- a/css/scss/authoring.scss
+++ b/css/scss/authoring.scss
@@ -91,6 +91,7 @@ fieldset {
   align-items: center;
   display: flex;
   margin: 0 auto;
+  min-height: 48px;
 
   > * {
     margin: 0 .5em;
